tests/snapshots/test_runner__tests__compiler__typecheck__function_generalization_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity = \x => x
let constant = \_ => 2
let map = \(x, f) => x.f()
let x: String = 'hello'.map(identity)
let y: String = 'hello'.map(\_ => 'yo')
let z: String = 'hello'.map(constant)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_generalization_3.kk:6:17
  │
6 │ let z: String = 'hello'.map(constant)
  │                 ^^^^^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Number    |
    +---------------+-------------+
